--- a/style.css
+++ b/style.css
@@ -68,28 +68,28 @@ body {
 }
 
 .blue {
-    background: linear-gradient(to right, #444 0%, blue 30%, #ddd 120%);
+    background: linear-gradient(to right, rgba(255,255,255,0.8) -10%, blue 50%, rgba(255,255,255,0.8) 110%);
     filter: brightness(1.1) contrast(1.05);
 }
 
 .red {
-    background: linear-gradient(to right, #444 0%, red 30%, #ddd 120%);
+    background: linear-gradient(to right, rgba(255,255,255,0.8) -10%, red 50%, rgba(255,255,255,0.8) 110%);
     filter: brightness(1.1) contrast(1.05);
 
 }
 
 .yellow {
-    background: linear-gradient(to right, #444 0%, yellow 30%, #ddd 120%);
+    background: linear-gradient(to right, rgba(255,255,255,0.8) -10%, yellow 50%, rgba(255,255,255,0.8) 110%);
     filter: brightness(1.1) contrast(1.05);
 }
 
 .purple {
-    background: linear-gradient(to right, #444 0%, purple 30%, #ddd 120%);
+    background: linear-gradient(to right, rgba(255,255,255,0.8) -10%, purple 50%, rgba(255,255,255,0.8) 110%);
     filter: brightness(1.1) contrast(1.05);
 }
 
 .green {
-    background: linear-gradient(to right, #444 0%, green 30%, #ddd 120%);
+    background: linear-gradient(to right, rgba(255,255,255,0.8) -10%, green 50%, rgba(255,255,255,0.8) 110%);
     filter: brightness(1.1) contrast(1.05);
 }
 
